Fixed learn displays on mobile

--- a/src/app/pages/learn/learn-best-suited/learn-best-suited.component.css
+++ b/src/app/pages/learn/learn-best-suited/learn-best-suited.component.css
@@ -149,8 +149,14 @@
     width: 85vw;
  
   }
+
+  .heading{
+    font-size: 23px;
+    width: 95vw;
+    margin-top: 0;
+  }
   .container{
-    margin-bottom: 30%;
+    margin-bottom: 22%;
   }
   .flex-container{
     height:69vh;
